# mcp-server

./: .env.example  .gitignore  README.md  litellm_chat_app.py  mcp_instance.py  mcp_server.py  pyproject.toml  run_chat.py  run_tests.py  server.py  stdio_mcp_wrapper.py  test_results_summary.md
.github/workflows/: tests.yml
clients/: ghmcp.py  litellm_chat_app.py
examples/litellm_mcp/: README.md  litellm_tool.py
prompts/: __init__.py  prompt_debug_error.py  prompt_echo_prompt.py  prompt_review_code.py
resources/: __init__.py  resource_config_app.py  resource_echo.py  resource_greeting.py  resource_users_profile.py
tests/: conftest.py  run_tests_and_report.py  test_add_tool.py  test_all_tools.py  test_arxiv_tool.py  test_calculate_bmi_extended.py  test_calculate_bmi_tool.py  test_calculator_edge_cases.py  test_calculator_tool.py  test_create_thumbnail_tool.py  test_duckduckgo_tool.py  test_echo_tool.py  test_fetch_weather_tool.py  test_github_tools.py  test_github_workflow.py  test_long_task_tool.py  test_news_search_updated.py  test_openmeteo_tool.py  test_tavily_search_tool.py  test_wikipedia_tool.py
tools/: __init__.py  tool_add.py  tool_arxiv.py  tool_calculate_bmi.py  tool_calculator.py  tool_create_thumbnail.py  tool_duckduckgo.py  tool_echo_tool.py  tool_fetch_weather.py  tool_github.py  tool_long_task.py  tool_mojeek.py  tool_news_search.py  tool_openmeteo.py  tool_tavily_search.py  tool_wikipedia.py
wrapper/: stdio_mcp_wrapper.py
