[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for experimenting with LLM tools"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]",  # Changed from "mcp" to "mcp[cli]" to include typer
    "httpx",
    "beautifulsoup4",
    "newsapi-python",
    "matplotlib",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-beautifulsoup4",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["tools", "resources", "prompts"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py313"]
