[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for experimenting with LLM tools"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]", # Changed from "mcp" to "mcp[cli]" to include typer
    "httpx",
    "beautifulsoup4",
    "newsapi-python",
    "matplotlib",
    "python-dotenv",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "litellm>=1.63.14",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-beautifulsoup4",
    "types-requests",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools", "resources", "prompts"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
#addopts = "--cov=tools --cov-report=term --cov-report=html:coverage_html --cov-report=xml"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["tools"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
